--- a/app/blocks/panelUsers/_panelUsers.sass
+++ b/app/blocks/panelUsers/_panelUsers.sass
@@ -43,7 +43,7 @@
           font-weight: 500
   &__wrapper
     padding: 15px
-    overflow-y: scroll
+    overflow-y: auto
     position: absolute
     bottom: 0
     top: 50px
