--- a/app/css/main.css
+++ b/app/css/main.css
@@ -11309,6 +11309,7 @@ a.tabnav-extra:hover {
   bottom: 0;
   top: 50px;
   height: 80vh;
+  width: 100%;
 }
 
 .panelAutobusy__subtitle {
@@ -11575,6 +11576,7 @@ a.tabnav-extra:hover {
   bottom: 0;
   top: 50px;
   height: 80vh;
+  width: 100%;
 }
 
 .panelDodajAutobus__subtitle {
@@ -11845,6 +11847,7 @@ a.tabnav-extra:hover {
   bottom: 0;
   top: 50px;
   height: 80vh;
+  width: 100%;
 }
 
 .panelPrzystanki__subtitle {
@@ -12094,6 +12097,7 @@ a.tabnav-extra:hover {
   bottom: 0;
   top: 50px;
   height: 80vh;
+  width: 100%;
 }
 
 .panelDodajPrzystanek__subtitle {
@@ -12364,6 +12368,7 @@ a.tabnav-extra:hover {
   bottom: 0;
   top: 50px;
   height: 80vh;
+  width: 100%;
 }
 
 .panelUsers__subtitle {
@@ -12613,6 +12618,7 @@ a.tabnav-extra:hover {
   bottom: 0;
   top: 50px;
   height: 80vh;
+  width: 100%;
 }
 
 .panelDodajUser__subtitle {
@@ -12889,6 +12895,7 @@ a.tabnav-extra:hover {
   bottom: 0;
   top: 50px;
   height: 80vh;
+  width: 100%;
 }
 
 .panelWyswietlAutobus__subtitle {
@@ -13171,11 +13178,12 @@ a.tabnav-extra:hover {
 
 .panelWyswietlPrzystanek__wrapper {
   padding: 15px;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: absolute;
   bottom: 0;
   top: 50px;
   height: 80vh;
+  width: 100%;
 }
 
 .panelWyswietlPrzystanek__subtitle {
@@ -13393,17 +13401,57 @@ a.tabnav-extra:hover {
   box-shadow: none;
 }
 
-.panelWyswietlUser {
-  min-width: 700px;
+.panelWyswietlUser__title {
+  padding: 0 40px;
+  background-color: #2196F3;
+  height: 40px;
+  color: white;
+  text-align: center;
+  line-height: 40px;
+  font-size: 1.3em;
+  cursor: default;
+  font-family: Roboto, sans-serif;
 }
 
-@media (max-width: 1024px) {
-  .panelWyswietlUser {
-    position: relative !important;
-    width: 100% !important;
-    margin: 55px auto 0;
-    top: 0 !important;
-  }
+.panelWyswietlUser__fastTravel {
+  padding: 10px 15px;
+  text-transform: uppercase;
+  font-family: Roboto, sans-serif;
+  font-size: 0.7em;
+  background-color: white;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+}
+
+.panelWyswietlUser__fastTravel span:after {
+  content: '\f054';
+  font-family: FontAwesome;
+  margin: 0 5px;
+  font-size: 0.8em;
+  vertical-align: text-bottom;
+}
+
+.panelWyswietlUser__fastTravel span:last-of-type:after {
+  content: '';
+}
+
+.panelWyswietlUser__fastTravel span a {
+  color: #222;
+  text-decoration: none;
+}
+
+.panelWyswietlUser__fastTravel span a i {
+  margin-right: 3px;
+}
+
+.panelWyswietlUser__fastTravel span:hover a {
+  color: #2196F3;
+}
+
+.panelWyswietlUser__fastTravel span.-active a {
+  color: #208de6;
+  font-weight: 500;
 }
 
 .panelWyswietlUser.-hidden {
@@ -13416,63 +13464,28 @@ a.tabnav-extra:hover {
 }
 
 .panelWyswietlUser__wrapper {
-  position: relative;
-  padding: 20px;
-}
-
-@media (max-width: 1024px) {
-  .panelWyswietlUser__wrapper {
-    overflow: scroll;
-  }
-}
-
-.panelWyswietlUser__title {
-  font-family: Lato, sans-serif;
-  font-weight: 500;
-  font-size: 15px;
-  text-align: center;
-  background: #3c8dbc;
-  color: #fff;
-  padding: 5px;
-  opacity: 0.9;
-}
-
-@media (max-width: 767px) {
-  .panelWyswietlUser__title {
-    text-align: center;
-  }
+  padding: 15px;
+  overflow-y: auto;
+  position: absolute;
+  bottom: 0;
+  top: 50px;
+  height: 80vh;
+  width: 100%;
 }
 
 .panelWyswietlUser__subtitle {
-  font-family: Lato, sans-serif;
-  font-weight: 300;
-  line-height: 26px;
-  margin-left: 3px;
-  font-size: 12px;
-  letter-spacing: 2px;
-  text-align: left;
-  color: #222;
-  font-style: italic;
-}
-
-@media (max-width: 767px) {
-  .panelWyswietlUser__subtitle {
-    text-align: center;
-    font-size: 12px;
-    font-style: normal;
-  }
+  font-family: Roboto, sans-serif;
+  color: #22282B;
+  font-size: 1.5em;
+  line-height: 1.6em;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  cursor: default;
 }
 
 .panelWyswietlUser__text {
-  font-family: Lato, sans-serif;
-  font-weight: 700;
-  max-width: 350px;
-  margin: 0 auto;
-  font-size: 16px;
-  line-height: 1.3;
-  letter-spacing: 1.25px;
-  text-align: center;
-  color: #999;
+  color: #88969F;
+  padding: 5px;
+  cursor: default;
 }
 
 .panelWyswietlUser__alert {
@@ -13522,6 +13535,9 @@ a.tabnav-extra:hover {
     -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
   }
 }
 
@@ -13548,6 +13564,17 @@ a.tabnav-extra:hover {
   text-align: center;
 }
 
+@media (max-width: 767px) {
+  .panelWyswietlUser__navigation__item {
+    -webkit-flex-basis: 100%;
+        -ms-flex-preferred-size: 100%;
+            flex-basis: 100%;
+    max-width: 100%;
+    margin: 10px 0;
+    height: 40px;
+  }
+}
+
 .panelWyswietlUser__navigation__item:hover {
   background: #3c8dbc;
 }
@@ -13560,15 +13587,20 @@ a.tabnav-extra:hover {
   background: #008d4c;
 }
 
+.panelWyswietlUser__navigation__item.greenDark {
+  background: #009149;
+}
+
+.panelWyswietlUser__navigation__item.greenDark:hover {
+  background: #00783c;
+}
+
 .panelWyswietlUser__navigation__item.red {
-  background: #a60605;
-  -webkit-order: 3;
-      -ms-flex-order: 3;
-          order: 3;
+  background: #be0000;
 }
 
 .panelWyswietlUser__navigation__item.red:hover {
-  background: #b00a11;
+  background: #a50000;
 }
 
 .panelWyswietlUser__content {
@@ -13584,6 +13616,7 @@ a.tabnav-extra:hover {
   text-transform: uppercase;
   color: #222;
   padding-bottom: 15px;
+  cursor: default;
 }
 
 @media (max-width: 767px) {
@@ -13606,11 +13639,19 @@ a.tabnav-extra:hover {
 
 .panelWyswietlUser__content__form__item {
   overflow: hidden;
-  -webkit-flex-basis: 50%;
-      -ms-flex-preferred-size: 50%;
-          flex-basis: 50%;
+  -webkit-flex-basis: 33%;
+      -ms-flex-preferred-size: 33%;
+          flex-basis: 33%;
   padding: 10px;
   margin: 5px 0;
+}
+
+@media (max-width: 767px) {
+  .panelWyswietlUser__content__form__item {
+    -webkit-flex-basis: 100%;
+        -ms-flex-preferred-size: 100%;
+            flex-basis: 100%;
+  }
 }
 
 .panelWyswietlUser__content__form__item.check {
@@ -13621,65 +13662,28 @@ a.tabnav-extra:hover {
   margin-right: 2px;
 }
 
-.panelWyswietlUser__content__form__item input {
-  padding: 0 10px;
-  height: 40px;
-  box-shadow: none !important;
-  outline: none;
-  font-weight: 400;
-  max-width: 300px;
-  width: 100%;
+.panelWyswietlUser__content__form__item .itemHeader {
+  font-weight: 500;
   display: block;
-  border-radius: 0;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 2px solid #D2E3E9;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  cursor: default;
+}
+
+.panelWyswietlUser__content__form__item p {
+  margin: 0;
+  padding: 10px 5px;
   font-size: 16px;
+  cursor: default;
 }
 
-.panelWyswietlUser__content__form__item input:focus {
-  border-bottom: 2px solid #4AAED4;
-}
-
-.panelWyswietlUser__content__form__item select {
-  height: 40px;
-  box-shadow: none !important;
-  outline: none;
-  font-weight: 400;
-  max-width: 300px;
+.panelWyswietlUser__content__form input, .panelWyswietlUser__content__form select {
   width: 100%;
-  display: block;
-  border-radius: 0;
-  border-top: 0;
-  border-left: 0;
-  border-right: 0;
-  border-bottom: 2px solid #D2E3E9;
-  font-size: 16px;
-}
-
-.panelWyswietlUser__content__form__item select:focus {
-  border-bottom: 2px solid #4AAED4;
-}
-
-.panelWyswietlUser__close {
-  transition: opacity 0.36s ease;
-  position: absolute;
-  top: 5px;
-  right: 10px;
-  cursor: pointer;
-  opacity: 0.8;
-  color: #fff;
-}
-
-.panelWyswietlUser__close:hover {
-  opacity: 1;
-}
-
-.panelWyswietlUser__close .panelWyswietlUser_icon {
-  font-size: 1.8em !important;
-}
-
-.panelWyswietlUser__icon {
-  font-size: 3em;
+  height: 40px;
+  border-radius: 4px;
+  border: none;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.6);
+  outline: none;
+  padding: 8px;
+  background-color: transparent;
+  box-shadow: none;
 }
