--- a/app/jade/panelDodajPrzystanek.jade
+++ b/app/jade/panelDodajPrzystanek.jade
@@ -13,4 +13,35 @@
     .panelDodajPrzystanek__subtitle Dodawanie przystanku floty
     .panelDodajPrzystanek__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
     form()
-      s
+      .panelDodajPrzystanek__content__form
+          .panelDodajPrzystanek__content__form__item
+            span.item Nazwa Przystanku
+            input(placeholder="Nazwa Przystanku")
+          .panelDodajPrzystanek__content__form__item
+            span.item Ulica
+            input(placeholder="Ulica")
+          .panelDodajPrzystanek__content__form__item
+            span.item Typ Przystanku
+            select
+              option(value=0) Normalny
+              option(value=1) Zabudowany
+          .panelDodajPrzystanek__content__form__item
+            span.item Koordynat Lat
+            input(placeholder="Lat")
+          .panelDodajPrzystanek__content__form__item
+            span.item Koordynat Lng
+            input(placeholder="Lng")
+          .panelDodajPrzystanek__content__form__item
+            span.item Czy ma biletomat?
+            select
+              option(value=0) Nie
+              option(value=1) Tak
+          .panelDodajPrzystanek__content__form__item
+            span.item Czy ma kiosk?
+            select
+              option(value=0) Nie
+              option(value=1) Tak
+      .panelDodajPrzystanek__navigation
+        button.green.panelDodajPrzystanek__navigation__item.green Dodaj Autobus
+        a(href="/#/busstop").panelDodajPrzystanek__navigation__item.gray.-abort Anuluj
+
