--- a/app/jade/index.jade
+++ b/app/jade/index.jade
@@ -9,6 +9,9 @@ html(lang="pl" ng-app="app")
       .panels__close
         a(href="/")
           i.fa.fa-angle-double-left
+      footer
+        p Zespół Coffee <br> Like?
+          img(src="img/coffee-cup.png" alt="Team")
     .wrapper
       .googleMaps
         .googleMaps__API#googleMaps
