--- a/app/css/main.css
+++ b/app/css/main.css
@@ -3145,10 +3145,19 @@ header {
 
 footer {
   display: block;
-  background-attachment: scroll;
-  background-position: center;
-  background-size: cover;
-  background-image: url("../img/footer.png");
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  text-align: right;
+  padding: 10px;
+  color: #666;
+  opacity: 0.4;
+}
+
+footer img {
+  width: 40px;
+  vertical-align: middle;
 }
 
 .flash__info {
