--- a/app/jade/_head.jade
+++ b/app/jade/_head.jade
@@ -22,6 +22,7 @@ head
     script(src="bower_components/angular-cookies/angular-cookies.min.js")
     script(src="bower_components/angular-route/angular-route.min.js")
     script(src="bower_components/angular-responsive-tables/release/angular-responsive-tables.js")
+    script(src="bower_components/ngmap/build/scripts/ng-map.js")
     //script(src="bower_components/responsive-tables-js/dist/responsivetables.js")
     //script(src="//code.jquery.com/ui/1.11.4/jquery-ui.js")
 
