--- a/app/blocks/panelDodajUser/_panelDodajUser.sass
+++ b/app/blocks/panelDodajUser/_panelDodajUser.sass
@@ -162,6 +162,27 @@
         background-color: transparent
         box-shadow: none
 
+        &.ng-touched.ng-invalid
+          border-color: rgba(128, 0, 2, 1)
+        &:focus
+          border-color: #2196F3
+        &.ng-invalid
+          border-color: rgba(128, 0, 2, 1)
+        &.ng-valid
+          border-color: rgba(14, 128, 0, 1)
+        &.ng-pristine
+          border-color: rgba(128, 128, 128, 0.6)
+
+      span.error-info
+        line-height: 30px
+        color: rgba(128, 0, 2, 1)
+
+  form.ng-submitted
+    input,select
+      &.ng-invalid
+        border-color: rgba(128, 0, 2, 1)
+      &.ng-valid
+        border-color: rgba(14, 128, 0, 1)
 
 
 
