--- a/app/jade/panelWyswietlAutobus.jade
+++ b/app/jade/panelWyswietlAutobus.jade
@@ -36,7 +36,7 @@
         p X Y
     .panelWyswietlAutobus__subtitle Edycja autobusu
     .panelWyswietlAutobus__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
-    form(name="BusForm" ng-controller="UpdateBusController" ng-submit="updateBus()" novalidate)
+    form(name="BusForm" ng-controller="UpdateBusController" novalidate)
       .panelWyswietlAutobus__content__form
           .panelWyswietlAutobus__content__form__item
             span.item Numer Rejestracyjny
@@ -57,7 +57,7 @@
               option(value=0) Nie
               option(value=1) Tak
       .panelWyswietlAutobus__navigation
-        button.green.panelWyswietlAutobus__navigation__item.green Aktualizuj Autobus
+        button(ng-click="updateBus()").green.panelWyswietlAutobus__navigation__item.green Aktualizuj Autobus
         a(href="/#/bus/delete/{{ AutobusID }}" ng-hide="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.red Dezaktywuj
         a(href="/#/bus/restore/{{ AutobusID }}" ng-show="item.BusStatus == 0").panelWyswietlAutobus__navigation__item.greenDark Aktywuj
         a(href="/#/bus").panelWyswietlAutobus__navigation__item.gray.-abort Anuluj
