--- a/app/jade/panelWyswietlPrzystanek.jade
+++ b/app/jade/panelWyswietlPrzystanek.jade
@@ -39,7 +39,7 @@
         p {{ item.LastControl }}
     .panelWyswietlPrzystanek__subtitle Edycja przystanku
     .panelWyswietlPrzystanek__text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.
-    form(ng-controller="UpdateBustopController" ng-submit="updateBusstop()")
+    form(ng-controller="UpdateBustopController")
       .panelWyswietlPrzystanek__content__form
           .panelWyswietlPrzystanek__content__form__item
             span.item Nazwa Przystanku
@@ -72,7 +72,7 @@
               option(value=0) Nie
               option(value=1) Tak
       .panelWyswietlPrzystanek__navigation
-        button.green.panelWyswietlPrzystanek__navigation__item.green Aktualizuj Przystanek
+        button(ng-click="updateBusstop()").green.panelWyswietlPrzystanek__navigation__item.green Aktualizuj Przystanek
         a(href="/#/busstop/delete/{{ PrzystanekID }}" ng-hide="item.BusStopStatus == 0").panelWyswietlPrzystanek__navigation__item.red Dezaktywuj
         a(href="/#/busstop/restore/{{ PrzystanekID }}" ng-show="item.BusStopStatus == 0").panelWyswietlPrzystanek__navigation__item.greenDark Aktywuj
         a(href="/#/busstop").panelWyswietlPrzystanek__navigation__item.gray.-abort Anuluj
