--- a/app/blocks/panelDodajPrzystanek/_panelDodajPrzystanek.sass
+++ b/app/blocks/panelDodajPrzystanek/_panelDodajPrzystanek.sass
@@ -173,8 +173,11 @@
         &.ng-pristine
           border-color: rgba(128, 128, 128, 0.6)
       span.error-info
-        line-height: 30px
+        padding: 8px 0
+        line-height: 1.2em
         color: rgba(128, 0, 2, 1)
+        display: block
+
 
   form.ng-submitted
     input,select
@@ -198,3 +201,13 @@
       font-size: 1.8em !important
   &__icon
     font-size: 3em
+  &__dataLoader
+    &__svg
+      height: 200px
+      width: 200px
+      margin: 0 auto
+    &__text
+      display: block
+      text-align: center
+      p
+        margin-bottom: 30px
